--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Mi página de ejemplo</title>
+		<title>Test de Sitio WEB</title>
 	</head>
 	<body>
 	Aquí va el contenido
