--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 		<title>Test de Sitio WEB</title>
 	</head>
 	<body>
-	Aquí va el contenido
+	Ejemplo de configuracion de APP Service
 	</body>
 </html>
